src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Customer_Id__c</fullName>
        <formula>Account.Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory__c</fullName>
        <label>Advisory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Social Media Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Email_1__c</fullName>
        <label>Alt Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alt_Email_2__c</fullName>
        <label>Alt Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Product__c</fullName>
        <label>Base Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
                <value>
                    <fullName>Last Will and Testament</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Score2__c</fullName>
        <formula>If(( Lead_score_time_sensitive_bucket_percent__c != 0 &amp;&amp; Lead_score_time_sensitive_bucket_total__c != 0 ),
(((( Lead_Score_Last_time_on_DBA_Q_Score__c + Lead_Score_Last_time_on_INC_Q_score__c + Lead_Score_Last_time_on_LLC_Q_score__c + Lead_Score_Last_time_on_NP_Q_score__c + Lead_score_last_time_on_website_score__c+Lead_Score_last_called_in_time_score__c+Lead_Score_last_emailed_in_time_score__c)/ Lead_score_time_sensitive_bucket_total__c )* Lead_score_time_sensitive_bucket_percent__c ) + Lead_Score_Non_Time_Sensitive__c ),Lead_Score_Non_Time_Sensitive__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Score__c</fullName>
        <formula>If(( Lead_score_time_sensitive_bucket_percent__c != 0 &amp;&amp; Lead_score_time_sensitive_bucket_total__c != 0 ),
(((( Lead_Score_Last_time_on_DBA_Q_Score__c + Lead_Score_Last_time_on_INC_Q_score__c + Lead_Score_Last_time_on_LLC_Q_score__c + Lead_Score_Last_time_on_NP_Q_score__c + Lead_score_last_time_on_website_score__c+Lead_Score_last_called_in_time_score__c+Lead_Score_last_emailed_in_time_score__c)/ Lead_score_time_sensitive_bucket_total__c )* Lead_score_time_sensitive_bucket_percent__c ) + Lead_Score_Non_Time_Sensitive__c + EP_Upsell_Score__c+Lead_Score_Mobile_time_since_creation__c),Lead_Score_Non_Time_Sensitive__c + EP_Upsell_Score__c + Lead_Score_Mobile_time_since_creation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VM Attempt 1</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 2</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 3</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 4</fullName>
                </value>
                <value>
                    <fullName>VM Final Attempt</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Contacted/Spoke - Commission Eligible</fullName>
                </value>
                <value>
                    <fullName>Contacted/Spoke - Ineligible</fullName>
                </value>
                <value>
                    <fullName>Call Transferred</fullName>
                </value>
                <value>
                    <fullName>Service Unavailable</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Text__c</fullName>
        <description>Full name of the record creator. For passing data thru data integration job into LZData</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>Created By (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Login_Email__c</fullName>
        <label>Customer Login Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Assigned__c</fullName>
        <description>Date/Time Assigned an Contact Owner was assigned - populated by Contact Owner IsAssigned Workflow</description>
        <label>Date/Time Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                    <default>true</default>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>Special Attention Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EP_Upsell_Score__c</fullName>
        <label>EP Upsell Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Response__c</fullName>
        <label>First Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FkUser__c</fullName>
        <externalId>true</externalId>
        <label>FkUser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Interaction_Id__c</fullName>
        <description>Genesys Interaction Id</description>
        <externalId>true</externalId>
        <label>Genesys Interaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to delete records</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Product_Text__c</fullName>
        <label>Initial Product Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Product__c</fullName>
        <label>Initial Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BAP</fullName>
                </value>
                <value>
                    <fullName>LAP</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>501c3</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>B&amp;R</fullName>
                </value>
                <value>
                    <fullName>COGS</fullName>
                </value>
                <value>
                    <fullName>Cert Copy</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Conv</fullName>
                </value>
                <value>
                    <fullName>Diss</fullName>
                </value>
                <value>
                    <fullName>MMM</fullName>
                </value>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>ENC</fullName>
                </value>
                <value>
                    <fullName>ENR</fullName>
                </value>
                <value>
                    <fullName>FQ</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>S-Corp Elec</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kenshoo_Id__c</fullName>
        <label>Mktg Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LZ_Order_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>LZ Order Contact ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Text__c</fullName>
        <description>Full name of the user last modified the record. For passing data thru data integration job into LZData</description>
        <formula>LastModifiedBy.FirstName + &apos; &apos; + LastModifiedBy.LastName</formula>
        <label>Last Modified By (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sales_Activity__c</fullName>
        <label>Last Sales Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Time_Added_to_Campaign__c</fullName>
        <label>Last Time Added to Campaign</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_DBA_Q_Score__c</fullName>
        <formula>IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=10,6, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=30,5, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=60,4, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=240,3, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=1440,2, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on DBA Q&apos; Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_DBA_Q__c</fullName>
        <label>Last time on DBA Questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_INC_Q__c</fullName>
        <label>Last time on INC Questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_INC_Q_score__c</fullName>
        <formula>IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=10,6, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=30,5, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=60,4, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=240,3, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=1440,2, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on INC Q&apos; score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_LLC_Q_score__c</fullName>
        <formula>IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=10,6, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=30,5, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=60,4, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=240,3, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=1440,2, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on LLC Q&apos; score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_NP_Q__c</fullName>
        <label>Last time on NP Questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_NP_Q_score__c</fullName>
        <formula>IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=10,6, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=30,5, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=60,4, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=240,3, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=1440,2, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on NP Q&apos; score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Mobile_time_since_creation__c</fullName>
        <formula>IF( AND(NOT(ISBLANK(Last_Time_Added_to_Campaign__c ))),
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=4320,4096, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=1440,2048, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=240,1024, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=60,512, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=30,256, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=10,128,64)))))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile time since creation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Non_Time_Sensitive__c</fullName>
        <label>Non Time Sensitive Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_Sensitive_Score__c</fullName>
        <label>Time Sensitive Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_on_Questionnaire_score__c</fullName>
        <formula>If( Value(Lead_Score_Time_on_this_Questionnaire__c) &gt; 30,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time on Questionnaire score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_on_this_Questionnaire__c</fullName>
        <label>Time on this Questionnaire</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_on_website__c</fullName>
        <label>Time on website</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_on_website_score__c</fullName>
        <formula>IF(VALUE(Lead_Score_Time_on_website__c) /30 &lt;1,0, 
IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=1 &amp;&amp; VALUE(Lead_Score_Time_on_website__c) /30 &lt;2,1, 
IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=2 &amp;&amp; VALUE(Lead_Score_Time_on_website__c) /30 &lt;3,2, 
IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=3 &amp;&amp; VALUE(Lead_Score_Time_on_website__c) /30 &lt;4,3, 
IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=4 &amp;&amp; VALUE(Lead_Score_Time_on_website__c) /30 &lt;5,4, 
IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=5,5,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time on website Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_last_called_in_time__c</fullName>
        <label>Last called in time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_last_called_in_time_score__c</fullName>
        <formula>iF(TODAY()-DATEVALUE(Lead_Score_last_called_in_time__c)&lt;=2,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last called in time score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_last_emailed_in_time_score__c</fullName>
        <formula>IF(TODAY()- DATEVALUE( Lead_score_last_emailed_in_time__c )&lt;=7,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last emailed in time score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_last_time_on_LLC_Q__c</fullName>
        <label>Last time on LLC questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hard SNE</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress (Assigned)</fullName>
                </value>
                <value>
                    <fullName>Qualified (Interested)</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost - No Interest</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost - No Descision / Activity</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost - Bad Info</fullName>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_score_last_emailed_in_time__c</fullName>
        <label>Last emailed in time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_time_on_Q_score__c</fullName>
        <formula>IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=10,6, 
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=30,5, 
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=60,4, 
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=240,3, 
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=1440,2, 
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on Q&apos; score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_time_on_questionnaire__c</fullName>
        <label>Last time on questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_time_on_website__c</fullName>
        <label>Last time on website</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_time_on_website_score__c</fullName>
        <formula>IF(TODAY()- DATEVALUE(Lead_score_last_time_on_website__c)&lt;=7,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on website score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_score_time_sensitive_bucket_percent__c</fullName>
        <label>Time sensitive bucket percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_score_time_sensitive_bucket_total__c</fullName>
        <label>Time Sensitive Bucket Total Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalZoom_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>LegalZoom Contact ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Medium__c</fullName>
        <label>Mktg Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Val2__c</fullName>
        <label>Mktg Val2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_negitive_Score__c</fullName>
        <label>Mobile negitive Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This fields contains the number of orders for each contact. Only contacts created after the release of this field have the right count.</description>
        <label>Number Of Orders</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Details__c</fullName>
        <description>for business development users - detail personal details for b2b customer</description>
        <label>Personal Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BAP</fullName>
                </value>
                <value>
                    <fullName>LAP</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>501c3</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>B&amp;R</fullName>
                </value>
                <value>
                    <fullName>COGS</fullName>
                </value>
                <value>
                    <fullName>Cert Copy</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Conv</fullName>
                </value>
                <value>
                    <fullName>Diss</fullName>
                </value>
                <value>
                    <fullName>MMM</fullName>
                </value>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>ENC</fullName>
                </value>
                <value>
                    <fullName>ENR</fullName>
                </value>
                <value>
                    <fullName>FQ</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>S-Corp Elec</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>STID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire_Lead_Milestone__c</fullName>
        <label>Questionnaire: Lead Milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RA_Order_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RA Order Test</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_Response_Calc__c</fullName>
        <formula>( First_Response__c - CreatedDate ) *1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_opportunity_latest_campaign__c</fullName>
        <label>Sales opportunity latest campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tealium_Updates__c</fullName>
        <label>Tealium_Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <formula>(Total_Phone_Contacts__c + Total_Emails__c) - Total_Activities_when_Order_placed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Activities_when_Order_placed__c</fullName>
        <label>Total Activities when Order placed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Emails__c</fullName>
        <formula>Contact_Case__r.Number_Inbound_Emails__c + Contact_Case__r.Total_outbound_emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Phone_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Phone Contacts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_By_Tealium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated By Tealium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Order_ID__c</fullName>
        <label>User Order ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_Pricing_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viewed Pricing Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Contacts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>DBA_Upsell_Pilot</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Date_Time_Assigned__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Standard_Contact</value>
        </filters>
        <label>DBA Upsell Pilot</label>
        <language>en_US</language>
        <sharedTo>
            <role>Outbound_Specialist</role>
            <role>Sales_Reporting_Analyst</role>
            <role>SalesforceSupport296281</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EP_Bundle_Upsell_Pilot_Contacts1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Date_Time_Assigned__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Product2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Standard_Contact</value>
        </filters>
        <label>EP Bundle Upsell Pilot Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>EP_Bundle_Upsell_Pilot</group>
            <role>Sales_Reporting_Analyst</role>
            <role>SalesforceSupport296281</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
</CustomObject>